--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 <body>
 <div id="app">
     <login-form v-if="!signedIn" v-on:sign="signIn"></login-form>
-    {{user}}
-    {{errorCode}}
-    {{errorMessage}}
+
     <div v-if="signedIn">
-        {{user}}
+        <div>Welcome {{user.displayName}}</div>
+        <div>
+            Current gifts: {{gifts}}
+        </div>
+        <div v-on:click="createGift">
+            add gift
+        </div>
     </div>
 </div>
 <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
